<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp"
    tools:context=".today.symptoms.SymptomsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms_title"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/symptoms_desc"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.chip.ChipGroup
            android:layout_marginTop="16dp"
            app:singleSelection="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_coughing"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_wheezing"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_shortness_of_breath"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_limits_to_exercise"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_chest_tightness"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_night_wakings"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:text="@string/symptoms_other"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/skye300"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:text="@string/symptoms_add_triggers"
            android:backgroundTint="@color/light_blue_400"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:shadowColor="@color/transparent"
            android:text="@string/symptoms_i_had_no_symptoms_yesterday"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
