<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medications.MedicationsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/medications_title"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_medication"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/skye300"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/v_tab_layout"
        style="@style/TabLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medications_relievers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medications_preventers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medications_other_meds" />

    </com.google.android.material.tabs.TabLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_100"
        tools:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_tab_layout">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="64dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="@color/grey_200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:src="@drawable/ic_inhaler"
                        android:scaleType="centerInside"
                        android:paddingStart="14dp"
                        android:paddingBottom="12dp"
                        android:layout_width="64dp"
                        android:layout_height="64dp"/>


                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medications_no_relievers"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/medications_no_relievers_desc"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:text="@string/medications_add_reliever"
                    android:backgroundTint="@color/blue"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:cornerRadius="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>